unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/iContactforSF__iContact_Sent_Message__c.object-meta.xml
<CustomObject>
    <customHelpPage>iContactforSF__iContactHelp</customHelpPage>
    <description>A record of a message that was sent via iContact. Used for tracking statistics.</description>
    <label>iContact Sent Message</label>
    <nameField>
        <label>Message Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iContact Sent Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>