unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__Body_HTML__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Body_HTML__c</fullName>
    <description>The HTML body of the email template that was sent to iContact.</description>
    <inlineHelpText>The HTML body of the email template that was sent to iContact.</inlineHelpText>
    <label>Body HTML</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>