unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__Campaign__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Campaign__c</fullName>
    <description>The SFDC campaign this message was sent from.</description>
    <inlineHelpText>The SFDC campaign this message was sent from.</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>iContact Sent Messages</relationshipLabel>
    <relationshipName>iContact_Sent_Messages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>