unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__Campaign_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Campaign_Member_Count__c</fullName>
    <description>The total number of campaign members the campaign had when this message was sent.</description>
    <inlineHelpText>The total number of campaign members the campaign had when this message was sent.</inlineHelpText>
    <label>Campaign Member Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>