unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__Click_Rate__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Click_Rate__c</fullName>
    <description>Unique clicks divided by released.</description>
    <formula>if(iContactforSF__Released__c &gt; 0, iContactforSF__Unique_Clicks__c / iContactforSF__Released__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The click rate is the ratio of individual clicks per recipients, which indicates the activity rate of your recipients. A high click rate (~8% or more) means people are frequently viewing and interacting with your message.</inlineHelpText>
    <label>Click Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>