unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__Clicks__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Clicks__c</fullName>
    <description>Number of message clicks as reported from iContact.</description>
    <inlineHelpText>Total clicks reports the total number of times that anyone has clicked on a link in your message. For instance, if 5 people click on one link and one more person clicks on 5 links, the total clicks would be 10.</inlineHelpText>
    <label>Total Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>