unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__Comments__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Comments__c</fullName>
    <description>Number of message comments as reported from iContact.</description>
    <inlineHelpText>Number of message comments as reported from iContact.</inlineHelpText>
    <label>Comments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>