unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__Complaint_Rate__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Complaint_Rate__c</fullName>
    <description>Complaints divided by released.</description>
    <formula>if(iContactforSF__Released__c &gt; 0, iContactforSF__Complaints__c / iContactforSF__Released__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The complaint rate is the ratio of the number of people who reported your message as spam per number of recipients.</inlineHelpText>
    <label>Complaint Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>