unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__Delivered__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Delivered__c</fullName>
    <description>Number of message deliveries as reported from iContact.</description>
    <inlineHelpText>This is the number of emails that successfully reached recipients' email inboxes. This can be less than the number of attempted sends due to bounced emails or unsubscribed contacts.</inlineHelpText>
    <label>Delivered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>