unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__Email_Template__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Email_Template__c</fullName>
    <label>Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>