unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__Last_Update_Statistics_Date__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Last_Update_Statistics_Date__c</fullName>
    <description>Deprecated field that has no use
The date/time of the most recent statistics update for this message.</description>
    <formula>LastModifiedDate</formula>
    <inlineHelpText>The date/time of the most recent statistics update for this message.</inlineHelpText>
    <label>Deprecated</label>
    <type>DateTime</type>
</CustomField>