unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__Open_Rate_Success_Threshold_1__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Open_Rate_Success_Threshold_1__c</fullName>
    <defaultValue>0.05</defaultValue>
    <description>The first success threshold for open rate, where red becomes yellow on the dashboard gauge.</description>
    <inlineHelpText>The first success threshold for open rate, where red becomes yellow on the dashboard gauge.</inlineHelpText>
    <label>Open Rate Caution %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>