unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__Released__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Released__c</fullName>
    <description>Number of deliveries + bounces as reported from iContact.</description>
    <formula>iContactforSF__Delivered__c +  iContactforSF__Bounces__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the number of messages that iContact attempted to send.</inlineHelpText>
    <label>Released</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>