unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__Released_Time__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Released_Time__c</fullName>
    <description>The time the send request was completed.</description>
    <inlineHelpText>The time the send request was completed.</inlineHelpText>
    <label>Released Time</label>
    <type>DateTime</type>
</CustomField>