unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__Sent_to__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Sent_to__c</fullName>
    <description>Displays whether this message was sent to all campaign members, or was targeted using the "Targeted Send" option.</description>
    <inlineHelpText>Displays whether this message was sent to all campaign members, or was targeted using the "Targeted Send" option.</inlineHelpText>
    <label>Sent to</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>