unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__StatisticsStatus__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__StatisticsStatus__c</fullName>
    <description>Indicator for status of the statistic updates for this message.</description>
    <inlineHelpText>Indicator for status of the statistic updates for this message.</inlineHelpText>
    <label>Update Statistics Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not In Progress</fullName>
                <default>true</default>
                <label>Not In Progress</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>