unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__StatusSummary__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__StatusSummary__c</fullName>
    <description>This is an optional summary giving more information about the current status</description>
    <label>StatusSummary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>