unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__Targeted_Join_Date1__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Targeted_Join_Date1__c</fullName>
    <description>Date used for targeted send process.</description>
    <label>Targeted Join Date 1</label>
    <type>Date</type>
</CustomField>