unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__Targeted_Join_Date2__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Targeted_Join_Date2__c</fullName>
    <description>Date used during targeted send process.</description>
    <label>Targeted Join Date 2</label>
    <type>Date</type>
</CustomField>