unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__Targeted_Message__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Targeted_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this was a targeted send, contains a link to the message that the targets were based on.</description>
    <inlineHelpText>If this was a targeted send, contains a link to the message that the targets were based on.</inlineHelpText>
    <label>Targeted Message</label>
    <referenceTo>iContactforSF__iContact_Sent_Message__c</referenceTo>
    <relationshipLabel>Targeted Sent Messages</relationshipLabel>
    <relationshipName>iContact_Sent_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>