unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__Unique_Clicks__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Unique_Clicks__c</fullName>
    <description>Total number of unique clicks as reported from iContact.</description>
    <inlineHelpText>Unique clicks reports the number of recipients that clicked on your message.</inlineHelpText>
    <label>Unique Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>