unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__Unique_Opens__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Unique_Opens__c</fullName>
    <description>Total number of unique opens as reported from iContact.</description>
    <inlineHelpText>Unique opens reports the number of recipients that opened your message.</inlineHelpText>
    <label>Unique Opens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>