unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__Unsubscribed__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__Unsubscribed__c</fullName>
    <description>Number of message unsubscribes as reported from iContact.</description>
    <inlineHelpText>Unsubscribes reports the number of contacts who unsubscribed from a particular message.</inlineHelpText>
    <label>Unsubscribes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>