unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/fields/iContactforSF__update_statistics_date__c.field-meta.xml
<CustomField>
    <fullName>iContactforSF__update_statistics_date__c</fullName>
    <description>Most recent time that updating statistics finished for this message.</description>
    <inlineHelpText>Most recent time that updating statistics finished for this message.</inlineHelpText>
    <label>Last Update Statistics Time</label>
    <type>DateTime</type>
</CustomField>