unpackaged/main/default/objects/iContactforSF__iContact_Sent_Message__c/validationRules/iContactforSF__CannotModifyStatusOrVersion.validationRule-meta.xml
<ValidationRule>
    <fullName>iContactforSF__CannotModifyStatusOrVersion</fullName>
    <active>false</active>
    <description>User cannot modify the status or version of the sent message.</description>
    <errorConditionFormula>OR (ISCHANGED(iContactforSF__Status__c), ISCHANGED( iContactforSF__Version__c))</errorConditionFormula>
    <errorMessage>You cannot modify the status or version of a sent message.</errorMessage>
</ValidationRule>